; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecSetPR.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_sh2_dynarec.c_SH2DynarecSetPR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSH2 = common dso_local global i32* null, align 8
@master_reg = common dso_local global i8** null, align 8
@PR = common dso_local global i64 0, align 8
@slave_reg = common dso_local global i8** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SH2DynarecSetPR(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32*, i32** @MSH2, align 8
  %7 = icmp eq i32* %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = load i8**, i8*** @master_reg, align 8
  %11 = load i64, i64* @PR, align 8
  %12 = getelementptr inbounds i8*, i8** %10, i64 %11
  store i8* %9, i8** %12, align 8
  br label %18

13:                                               ; preds = %2
  %14 = load i8*, i8** %4, align 8
  %15 = load i8**, i8*** @slave_reg, align 8
  %16 = load i64, i64* @PR, align 8
  %17 = getelementptr inbounds i8*, i8** %15, i64 %16
  store i8* %14, i8** %17, align 8
  br label %18

18:                                               ; preds = %13, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
